# controllers/categoryController.js
@@ -1,0 +1,11 @@
+const Category = require('../models/Category');
+
+// GET all categories
+exports.getAll = async (req, res) => {
+  try {
+    const categories = await Category.find();
+    res.json(categories);
+  } catch (err) {
+    res.status(500).json({ error: err.message });
+  }
+};
