# models/Category.js
@@ -1,0 +1,7 @@
+const mongoose = require('mongoose');
+
+const categorySchema = new mongoose.Schema({
+  categoryName: String,
+});
+
+module.exports = mongoose.model('Category', categorySchema);
