# swagger-output.json
@@ -7,13 +7,27 @@
   },
   "host": "crud-api-oauthja.onrender.com",
   "basePath": "/",
-  "schemes": [
-    "https"
-  ],
+  "schemes": ["https"],
   "paths": {
+    "/api/categories/": {
+      "get": {
+        "description": "Get all categories",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/products/": {
       "get": {
-        "description": "",
+        "description": "Get all products",
         "responses": {
           "200": {
             "description": "OK"
@@ -27,7 +41,7 @@
         }
       },
       "post": {
-        "description": "",
+        "description": "Authoorization/Permission is required",
         "parameters": [
           {
             "name": "body",
@@ -38,7 +52,22 @@
                 "name": {
                   "example": "any"
                 },
+                "description": {
+                  "example": "any"
+                },
                 "price": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "any"
+                },
+                "quantity": {
+                  "example": "any"
+                },
+                "inStock": {
+                  "example": "any"
+                },
+                "supplier": {
                   "example": "any"
                 }
               }
@@ -85,13 +114,43 @@
         }
       },
       "put": {
-        "description": "",
+        "description": "Authoorization/Permission is required",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "any"
+                },
+                "quantity": {
+                  "example": "any"
+                },
+                "inStock": {
+                  "example": "any"
+                },
+                "supplier": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -110,7 +169,7 @@
         }
       },
       "delete": {
-        "description": "",
+        "description": "Authoorization/Permission is required",
         "parameters": [
           {
             "name": "id",
